@@ -1,19 +1,15 @@
 package xfacthd.buddingcrystals.common.datagen.providers;
 
-import com.mojang.datafixers.util.Pair;
 import net.minecraft.advancements.critereon.ItemPredicate;
-import net.minecraft.data.DataGenerator;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.PackOutput;
+import net.minecraft.data.loot.BlockLootSubProvider;
 import net.minecraft.data.loot.LootTableProvider;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.ItemTags;
+import net.minecraft.world.flag.FeatureFlags;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.storage.loot.LootTable;
-import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.functions.ApplyBonusCount;
 import net.minecraft.world.level.storage.loot.functions.SetItemCountFunction;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.predicates.MatchTool;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
@@ -21,24 +17,25 @@ import xfacthd.buddingcrystals.common.BCContent;
 import xfacthd.buddingcrystals.common.data.OptionalLootItem;
 import xfacthd.buddingcrystals.common.util.CrystalSet;
 
-import java.util.*;
-import java.util.function.*;
+import java.util.List;
+import java.util.Set;
 
 public final class BuddingLootTableProvider extends LootTableProvider
 {
-    public BuddingLootTableProvider(DataGenerator generator) { super(generator); }
-
-    @Override
-    protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext tracker) { /*NOOP*/ }
-
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables()
+    public BuddingLootTableProvider(PackOutput output)
     {
-        return Collections.singletonList(Pair.of(BlockLootTable::new, LootContextParamSets.BLOCK));
+        super(output, Set.of(), List.of(
+                new SubProviderEntry(BlockLootTable::new, LootContextParamSets.BLOCK)
+        ));
     }
 
-    private static class BlockLootTable extends BlockLoot
+    private static class BlockLootTable extends BlockLootSubProvider
     {
+        public BlockLootTable()
+        {
+            super(Set.of(), FeatureFlags.VANILLA_SET);
+        }
+
         @Override
         protected Iterable<Block> getKnownBlocks()
         {
@@ -49,7 +46,7 @@ public final class BuddingLootTableProvider extends LootTableProvider
         }
 
         @Override
-        protected void addTables()
+        protected void generate()
         {
             BCContent.builtinSets().forEach(set ->
             {
